Overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ a {
   width: 100vw;
   height: 100vh;
   text-align: center;
+  overflow: auto;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
